--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,22 +35,22 @@ jobs:
       - name: Build wheels (manylinux)
         uses: joerick/cibuildwheel@v2.6.1
         env:
-          CIBW_BEFORE_BUILD: "yum install -y flex bison libxml2-devel zlib-devel && pip install cmake wheel && python setup.py build_c_core"
+          CIBW_BEFORE_BUILD: "yum install -y flex bison libxml2-devel zlib-devel hdf5-devel && pip install cmake wheel && python setup.py build_c_core"
           CIBW_BUILD: "*-manylinux_${{ matrix.wheel_arch }}"
           # Skip tests for Python 3.10 because SciPy does not have a 32-bit
           # wheel for Linux yet
           CIBW_TEST_SKIP: "cp310-manylinux_i686"
 
-      - name: Build wheels (musllinux)
-        uses: joerick/cibuildwheel@v2.6.1
-        env:
-          CIBW_BEFORE_BUILD: "apk add flex bison libxml2-dev zlib-dev && pip install cmake wheel && python setup.py build_c_core"
-          CIBW_BUILD: "*-musllinux_${{ matrix.wheel_arch }}"
-          CIBW_TEST_EXTRAS: "test-musl"
+      #- name: Build wheels (musllinux)
+      #  uses: joerick/cibuildwheel@v2.6.1
+      #  env:
+      #    CIBW_BEFORE_BUILD: "apk add flex bison libxml2-dev zlib-dev && pip install cmake wheel && python setup.py build_c_core"
+      #    CIBW_BUILD: "*-musllinux_${{ matrix.wheel_arch }}"
+      #    CIBW_TEST_EXTRAS: "test-musl"
 
-      - uses: actions/upload-artifact@v2
-        with:
-          path: ./wheelhouse/*.whl
+      #- uses: actions/upload-artifact@v2
+      #  with:
+      #    path: ./wheelhouse/*.whl
 
 
   build_wheel_macos:
