--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        wheel_arch: [x86_64, i686]
+        wheel_arch: [x86_64]
 
     steps:
       - uses: actions/checkout@v2
@@ -35,7 +35,7 @@ jobs:
       - name: Build wheels (manylinux)
         uses: joerick/cibuildwheel@v2.6.1
         env:
-          CIBW_BEFORE_BUILD: "yum install -y flex bison libxml2-devel zlib-devel hdf5 && pip install cmake wheel && python setup.py build_c_core"
+          CIBW_BEFORE_BUILD: "yum install -y flex bison libxml2-devel zlib-devel && pip install cmake wheel && python setup.py build_c_core"
           CIBW_BUILD: "*-manylinux_${{ matrix.wheel_arch }}"
           # Skip tests for Python 3.10 because SciPy does not have a 32-bit
           # wheel for Linux yet
